--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "connect-livereload": "~0.3.2",
     "tiny-lr": "0.0.5",
     "gulp-ruby-sass": "~0.4.0",
-    "gulp-usemin": "~0.3.2"
+    "gulp-usemin": "~0.3.2",
+    "gulp-autoprefixer": "0.0.6"
   }
 }
