Removed 'init' requirement with upgrade to SASS 3.3.

--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "connect": "~2.12.0",
     "connect-livereload": "~0.3.2",
     "tiny-lr": "0.0.5",
-    "gulp-ruby-sass": "~0.4.0",
     "gulp-usemin": "~0.3.2",
     "gulp-autoprefixer": "0.0.6",
-    "gulp-clean": "~0.2.4"
+    "gulp-clean": "~0.2.4",
+    "gulp-ruby-sass": "~0.4.0"
   }
 }
